--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,9 @@ body{
   color: #98c1d9;
   
 }
+.overall{
+  display: flex;
+}
 img{
   width: 100%;
   height: 100%;
@@ -97,19 +100,11 @@ img{
   margin-top: -150px;
 }
 
-/* .image{
-  width: 300px;
-  display: flex;
-  height: 300px;
-  margin-top: -300px;
-  margin-left: auto;
-} */
-
 .image{
   width: 150px;
   display: flex;
   height: 100px;
-  margin-top: -125px;
+  margin-top: 160px;
   margin-left: auto;
   margin-right: 70px;
   background-color: #98c1d9;
@@ -216,7 +211,7 @@ button a{
   }
   .image{
     margin-right: 60px;
-    margin-top: -100px;
+    /* margin-top: -100px; */
     width: 120px;
     height: 80px;
   }
@@ -235,19 +230,45 @@ button a{
   }
   .image{
     width: 105px;
-    margin-top: -80px;
+    /* margin-top: -80px; */
     height: 55px;
     margin-right: 40px;
   }
-  .socialNotExpand{
-    margin-top: 70px;
-  }
+ 
   .social{
-    margin-top: 200px;
+    margin-top: 100px;
   }
   p{
     margin-top: -25px;
     font-size: large;
+  }
+}
+@media (max-width:459px){
+  /* img{
+    width: 160px;
+    height: 160px;
+    margin-top: -100px;
+    margin-left: -35px;
+  } */
+  .image{
+    height: 60px;
+    width: 100px;
+    display: flex;
+    margin-left: auto;
+  }
+  .socialNotExpand{
+    margin-top: -10px;
+  }
+  .overall{
+    display: flex;
+    flex-direction: row;
+  }
+  .word{
+  margin-top: 10px;
+    margin-right: auto;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 @media (min-width:1300px){
@@ -269,7 +290,7 @@ button a{
     margin-top: -180px;
   }
   .image{
-    margin-top: -140px;
+    /* margin-top: 170px; */
     width: 200px;
     height: 125px;
     margin-right: 120px;
